--- a/apps/website/Dockerfile
+++ b/apps/website/Dockerfile
@@ -4,5 +4,5 @@ RUN npm i -g pnpm
 COPY . .
 RUN pnpm install
 RUN pnpm packages:build
-CD apps/website
+WORKDIR /website/apps/website
 CMD ["pnpm", "run", "start"]
