fix: resolve linter errors

--- a/packages/discord/package.json
+++ b/packages/discord/package.json
@@ -9,7 +9,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsup",
+    "build-disabled": "tsup",
     "lint": "eslint --ext .ts,.tsx .",
     "lint:fix": "eslint --fix --ext .ts,.tsx ."
   },
