fix: hardcode api url for next build

--- a/apps/website/Dockerfile
+++ b/apps/website/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /fukusound
 RUN npm i -g pnpm
 COPY . .
 RUN pnpm install
+ENV API_URL="http://fukusound-api:3001/"
 RUN pnpm packages:build
 WORKDIR /fukusound/apps/website
 CMD ["pnpm", "run", "start"]
