--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -12,46 +12,26 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     steps:
+      - name: Use CLI
+        uses: scaleway/action-scw@v0
+        with:
+          save_config: true
+          export_config: true
+          version: v2.13.0
+          access-key: ${{ secrets.SCW_ACCESS_KEY }}
+          secret-key: ${{ secrets.SCW_SECRET_KEY }}
+          default-project-id: ${{ secrets.SCW_DEFAULT_PROJECT_ID }}
+          default-organization-id: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
       - uses: actions/checkout@master
-      - uses: azure/docker-login@v1
+      - name: Login Scaleway Container Registry
+        uses: docker/login-action@v2
         with:
-          login-server: ghcr.io
-          username: ${{ secrets.GH_USERNAME }}
-          password: ${{ secrets.GH_TOKEN }}
-      - run: |
-          docker build . -f apps/website/Dockerfile -t ghcr.io/${{ secrets.GH_USERNAME }}/fukusound-ui:${{ github.sha }} -t ghcr.io/${{ secrets.GH_USERNAME }}/fukusound-ui:latest
-          docker push ghcr.io/${{ secrets.GH_USERNAME }}/fukusound-ui:${{ github.sha }}
-          docker push ghcr.io/${{ secrets.GH_USERNAME }}/fukusound-ui:latest
-          docker build . -f apps/service/Dockerfile -t ghcr.io/${{ secrets.GH_USERNAME }}/fukusound-api:${{ github.sha }} -t ghcr.io/${{ secrets.GH_USERNAME }}/fukusound-api:latest
-          docker push ghcr.io/${{ secrets.GH_USERNAME }}/fukusound-api:${{ github.sha }}
-          docker push ghcr.io/${{ secrets.GH_USERNAME }}/fukusound-api:latest
-      - uses: azure/setup-kubectl@v3
-      - uses: azure/k8s-set-context@v3
-        with:
-          method: kubeconfig
-          kubeconfig: ${{ secrets.K8_CONFIG }}
-      - uses: azure/k8s-create-secret@v4
-        with:
-          container-registry-url: ghcr.io
-          container-registry-username: ${{ secrets.GH_USERNAME }}
-          container-registry-password: ${{ secrets.GH_TOKEN }}
-          container-registry-email: ${{ secrets.GH_EMAIL }}
-          secret-name: gh-registry-secret
-          namespace: default
-      - uses: azure/k8s-create-secret@v4
-        with:
-          namespace: default
-          secret-type: generic
-          secret-name: fukusound
-          string-data: ${{ secrets.FUKUSOUND_ENV }}
-      - uses: azure/k8s-deploy@v4
-        with:
-          action: deploy
-          strategy: basic
-          manifests: manifests
-          pull-images: false
-          images: |
-            ghcr.io/${{ secrets.GH_USERNAME }}/fukusound-ui:${{ github.sha }}
-            ghcr.io/${{ secrets.GH_USERNAME }}/fukusound-api:${{ github.sha }}
-          imagepullsecrets: |
-            gh-registry-secret
+          username: nologin
+          password: ${{ secrets.SCALEWAY_API_KEY }}
+          registry: ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}
+      - name: Build Docker image
+        run: docker build . -t ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/handbuch:latest -t ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/handbuch:${{ github.sha }}
+      - name: Push Docker Image
+        run: |
+          docker push ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/handbuch
+          docker push ${{ secrets.CONTAINER_REGISTRY_ENDPOINT }}/handbuch:${{ github.sha }}
